<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/editUserTypeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updateUserTypeText"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        />
    <RadioGroup
        android:id="@+id/editUserType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/editUserTypeText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <RadioButton
            android:id="@+id/seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/userTypeSeller" />
        <RadioButton
            android:id="@+id/buyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/userTypeBuyer" />
    </RadioGroup>
    <EditText
        android:id="@+id/editUserName"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintNameSurname"
        app:layout_constraintTop_toBottomOf="@id/editUserType"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        />
    <EditText
        android:id="@+id/editUserEmail"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintEmail"
        app:layout_constraintTop_toBottomOf="@id/editUserName"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:id="@+id/editEmailWarningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/editUserEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        android:textColor="@color/colorRed"
        />
    <EditText
        android:id="@+id/editUserPassword"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintPassword"
        app:layout_constraintTop_toBottomOf="@id/editEmailWarningText"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        android:inputType="textPassword"
        />
    <TextView
        android:id="@+id/editPasswordLengthWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/editUserPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        android:textColor="@color/colorRed"
        />
    <EditText
        android:id="@+id/editUserRepeatPassword"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintPassword"
        app:layout_constraintTop_toBottomOf="@id/editPasswordLengthWarning"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        android:inputType="textPassword"

        />
    <TextView
        android:id="@+id/editSamePasswordWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/editUserRepeatPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        android:textColor="@color/colorRed"
        />
    <EditText
        android:id="@+id/editUserPhone"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintPhone"
        app:layout_constraintTop_toBottomOf="@id/editSamePasswordWarning"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        />
    <EditText
        android:id="@+id/editUserPlace"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintPlace"
        app:layout_constraintTop_toBottomOf="@id/editUserPhone"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        />

    <Spinner
        android:id="@+id/editUserCounties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintCounty"
        app:layout_constraintTop_toBottomOf="@id/editUserPlace"
        style="@style/Widget.AppCompat.DropDownItem.Spinner"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        android:layout_marginRight="@dimen/margin20dp"
        />
    <TextView
        android:id="@+id/editCountyWarningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/editUserCounties"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorRed"
        />

    <EditText
        android:id="@+id/editUserAddress"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintAddress"
        app:layout_constraintTop_toBottomOf="@id/editUserType"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/margin20dp"
        />
    <ImageView
        android:id="@+id/editUserImage"
        android:layout_width="@dimen/size150dp"
        android:layout_height="@dimen/size150dp"
        android:src="@drawable/ic_launcher_foreground"
        android:hint="@string/hintPlace"
        app:layout_constraintTop_toBottomOf="@id/editUserAddress"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/margin20dp"
        />
    <Button
        android:id="@+id/editUserImageButton"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:text="@string/selectImageButtonText"
        app:layout_constraintTop_toBottomOf="@id/editUserImage"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/margin20dp"
        />
    <EditText
        android:id="@+id/editUserFarm"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintFarm"
        app:layout_constraintTop_toBottomOf="@id/editUserPhone"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/margin20dp"
        />
    <Button
        android:id="@+id/editUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editButtonText"
        app:layout_constraintTop_toBottomOf="@+id/editCountyWarningText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>