<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity"
    android:background="@drawable/background">

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/registerProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin20dp"
        android:layout_marginLeft="@dimen/margin20dp"
        android:layout_marginRight="@dimen/margin20dp"

        />
    <TextView
        android:id="@+id/registerUserType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerUserTypeText"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/registerProgressBar"
        />
    <RadioGroup
        android:id="@+id/registerUserGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/registerUserType"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <RadioButton
            android:id="@+id/seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/userTypeSeller" />
        <RadioButton
            android:id="@+id/buyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/userTypeBuyer" />
    </RadioGroup>
    <EditText
        android:id="@+id/registerUserName"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintNameSurname"
        app:layout_constraintTop_toBottomOf="@id/registerUserGroup"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        />
    <EditText
        android:id="@+id/registerUserEmail"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintEmail"
        app:layout_constraintTop_toBottomOf="@id/registerUserName"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:id="@+id/registerUserEmailWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/registerUserEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        android:textColor="@color/colorRed"
        />
    <EditText
        android:id="@+id/registerUserPassword"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintPassword"
        app:layout_constraintTop_toBottomOf="@id/registerUserEmailWarning"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        android:inputType="textPassword"
        />
    <TextView
        android:id="@+id/registerPasswordLengthWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/registerUserPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        android:textColor="@color/colorRed"
        />
    <EditText
        android:id="@+id/registerUserPasswordRepeat"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintPassword"
        app:layout_constraintTop_toBottomOf="@id/registerUserPassword"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        android:inputType="textPassword"

        />
    <TextView
        android:id="@+id/registerPasswordSameWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/registerUserPasswordRepeat"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        android:textColor="@color/colorRed"
        />
    <EditText
        android:id="@+id/registerUserPhone"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintPhone"
        app:layout_constraintTop_toBottomOf="@id/registerUserPasswordRepeat"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        />
    <EditText
        android:id="@+id/registerUserPlace"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintPlace"
        app:layout_constraintTop_toBottomOf="@id/registerUserPhone"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        />

    <Spinner
        android:id="@+id/registerUserCounty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintCounty"
        app:layout_constraintTop_toBottomOf="@id/registerUserPlace"
        style="@style/Widget.AppCompat.DropDownItem.Spinner"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/margin20dp"
        android:layout_marginRight="@dimen/margin20dp"
        />
    <TextView
        android:id="@+id/registerCountyWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/registerUserCounty"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorRed"
        />

    <EditText
        android:id="@+id/registerUserAddress"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintAddress"
        app:layout_constraintTop_toBottomOf="@id/registerUserType"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/margin20dp"
        />
    <ImageView
        android:id="@+id/registerUserImage"
        android:layout_width="@dimen/size150dp"
        android:layout_height="@dimen/size170dp"
        android:src="@drawable/ic_launcher_foreground"
        android:hint="@string/hintPlace"
        app:layout_constraintTop_toBottomOf="@id/registerUserAddress"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/margin20dp"
        />
    <Button
        android:id="@+id/buttonSelectUserImage"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:text="@string/selectImageButtonText"
        app:layout_constraintTop_toBottomOf="@id/registerUserImage"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/margin20dp"
        />
    <EditText
        android:id="@+id/registerUserFarm"
        android:layout_width="@dimen/size150dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintFarm"
        app:layout_constraintTop_toBottomOf="@id/registerUserPhone"
        android:layout_marginTop="@dimen/margin20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/margin20dp"
        />
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerButtonText"
        app:layout_constraintTop_toBottomOf="@+id/registerCountyWarning"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"
        />


</androidx.constraintlayout.widget.ConstraintLayout>