<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.WelcomeActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome_message"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/size150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcomeMessage"
        />
    <TextView

        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        android:textSize="@dimen/textSize30sp"
        android:layout_marginTop="@dimen/margin50dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@id/welcomeMessage"
        android:background="@color/colorPrimary"
        />
    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/loginButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeMessage"
        android:background="@color/colorPrimary"
        android:padding="@dimen/margin5dp"
        />
    <TextView
        android:id="@+id/guestModeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        android:layout_marginTop="@dimen/margin20dp"
        android:text="@string/proceedAsGuestText"
        android:textAlignment="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>