<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/productImage"
        android:layout_margin="@dimen/margin20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="@dimen/size180dp"
        android:layout_height="@dimen/size180dp"/>
    <TextView
        android:id="@+id/productDetailType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hintType"
        android:textSize="@dimen/textSize18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/productImage"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/margin20dp"/>
    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintPrice"
        android:textSize="@dimen/textSize18sp"
        app:layout_constraintTop_toBottomOf="@id/productDetailType"
        app:layout_constraintLeft_toRightOf="@id/productImage"
        android:layout_margin="@dimen/margin20dp"/>
    <TextView
        android:id="@+id/productLocation"
        android:layout_width="@dimen/size0dp"
        android:layout_height="wrap_content"
        android:text="@string/hintPlace"
        android:textSize="@dimen/textSize18sp"
        app:layout_constraintTop_toBottomOf="@id/productPrice"
        app:layout_constraintLeft_toRightOf="@id/productImage"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/margin20dp"/>
    <TextView
        android:id="@+id/productAddress"
        android:layout_width="@dimen/size0dp"
        android:layout_height="wrap_content"
        android:text="@string/hintAddress"
        android:textSize="@dimen/textSize18sp"
        app:layout_constraintTop_toBottomOf="@id/productLocation"
        app:layout_constraintLeft_toRightOf="@id/productImage"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/margin20dp"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintNameSurname"
        android:textSize="@dimen/textSize18sp"
        app:layout_constraintTop_toBottomOf="@id/productImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/userImage"
        android:layout_margin="@dimen/margin20dp"/>

    <TextView
        android:id="@+id/userContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintPhone"
        android:textSize="@dimen/textSize18sp"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/userImage"
        app:layout_constraintBottom_toTopOf="@id/userOtherProducts"
        android:layout_margin="@dimen/margin20dp"/>
    <ImageButton
        android:id="@+id/userContanctButton"
        android:layout_width="@dimen/iconSize40dp"
        android:layout_height="@dimen/iconSize40dp"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintBottom_toTopOf="@id/userOtherProducts"
        app:layout_constraintRight_toLeftOf="@id/userImage"
        app:layout_constraintLeft_toRightOf="@id/userContact"
        android:background="@color/colorPrimary"
        android:src="@drawable/ic_phone"
        android:foreground="@drawable/icon_rounded_foreground"
        />
    <TextView
        android:id="@+id/userOtherProducts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otherUserProductsText"
        android:textSize="@dimen/textSize18sp"
        app:layout_constraintTop_toBottomOf="@id/userImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/margin20dp"/>
    <ImageView
        android:id="@+id/userImage"
        android:layout_margin="@dimen/margin20dp"
        app:layout_constraintTop_toBottomOf="@id/productImage"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="@dimen/productImageSize100dp"
        android:layout_height="@dimen/productImageSize100dp"
        android:foreground="@drawable/icon_rounded_foreground"/>
    <ImageButton
        android:id="@+id/userInfo"
        android:layout_width="@dimen/iconSize30dp"
        android:layout_height="@dimen/iconSize30dp"
        
        app:layout_constraintBottom_toTopOf="@id/userOtherProducts"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/userImage"
        android:layout_marginRight="@dimen/margin20dp"
        android:background="@color/colorLightBlue"
        android:src="@drawable/ic_user_info"
        android:foreground="@drawable/icon_rounded_foreground"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userProducts"
        app:layout_constraintTop_toBottomOf="@id/userOtherProducts"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>